--- a/AWS-Network-Firewall-demo.yaml
+++ b/AWS-Network-Firewall-demo.yaml
@@ -238,10 +238,48 @@ Resources:
             LogDestination:
               logGroup: !Ref AWSNetworkFirewallLogGroup
 
-  AWSNetworkFirewallLogGroup: 
+  AWSNetworkFirewallLogGroup:
+    DependsOn:
+      - AWSNetworkFirewallLogGroupKMSkey
     Type: AWS::Logs::LogGroup
-    Properties: 
+    Properties:
+      KmsKeyId: !GetAtt AWSNetworkFirewallLogGroupKMSkey.Arn
       RetentionInDays: 3
+
+  AWSNetworkFirewallLogGroupKMSkey:
+    Type: AWS::KMS::Key
+    Properties:
+      KeyPolicy:
+        Version: '2012-10-17'
+        Id: key-default-1
+        Statement:
+        - Sid: Allow administration of the key
+          Effect: Allow
+          Principal:
+            AWS:
+              Fn::Join:
+              - ''
+              - - 'arn:aws:iam::'
+                - Ref: AWS::AccountId
+                - :root
+          Action: kms:*
+          Resource: '*'
+        - Sid: Allow use of the key
+          Effect: Allow
+          Principal:
+            Service:
+              Fn::Join:
+              - ''
+              - - 'logs.'
+                - Ref: AWS::Region
+                - .amazonaws.com
+          Action:
+          - kms:Encrypt*
+          - kms:Decrypt*
+          - kms:ReEncrypt*
+          - kms:GenerateDataKey*
+          - kms:Describe*
+          Resource: '*'
 
   EgressRoute:
     Type: AWS::EC2::Route
@@ -295,6 +333,11 @@ Resources:
         - IpProtocol: tcp
           FromPort: 80
           ToPort: 80
+          CidrIp: "0.0.0.0/0"
+      SecurityGroupEgress:
+        - IpProtocol: -1
+          FromPort: -1
+          ToPort: -1
           CidrIp: "0.0.0.0/0"
       VpcId: !Ref VPC
 
