--- a/AWS-Network-Firewall-demo.yaml
+++ b/AWS-Network-Firewall-demo.yaml
@@ -16,6 +16,11 @@ Resources:
           FromPort: 443
           ToPort: 443
           CidrIp: 10.0.0.0/16
+        SecurityGroupEgress:
+          - IpProtocol: -1
+            FromPort: -1
+            ToPort: -1
+            CidrIp: "0.0.0.0/0"
 
   SSMEndpoint1:
     Type: AWS::EC2::VPCEndpoint
