Enabling KMS key rotation

--- a/AWS-Network-Firewall-demo.yaml
+++ b/AWS-Network-Firewall-demo.yaml
@@ -254,6 +254,7 @@ Resources:
   AWSNetworkFirewallLogGroupKMSkey:
     Type: AWS::KMS::Key
     Properties:
+      EnableKeyRotation: true
       KeyPolicy:
         Version: '2012-10-17'
         Id: key-default-1
